栏目管理界面

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -2,3 +2,9 @@ appname = MarmotCMS
 httpport = 8080
 runmode = dev
 autorender = false
+
+#db config
+mysqluser = "stlswm"
+mysqlpass = "C9kS2WDZ8KQ2t3GvFymn"
+mysqlurls = "115.28.244.155"
+mysqldb   = "marmot_cms"
